--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "autoevals": "^0.0.118",
     "bun": "",
     "evalite": "^0.8.2",
+    "glob": "^11.0.1",
     "mathjs": "^14.1.0",
+    "prettier": "^3.4.2",
+    "sqlite3": "^5.1.7",
     "vitest": "^3.0.4",
     "zod": "^3.24.1"
   },
