Some more scorers

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ai": "^4.1.4",
     "autoevals": "^0.0.118",
     "bun": "",
+    "eslint": "^9.19.0",
     "evalite": "^0.8.2",
     "glob": "^11.0.1",
     "mathjs": "^14.1.0",
