--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mathjs": "^14.1.0",
     "prettier": "^3.4.2",
     "sqlite3": "^5.1.7",
+    "typescript-eslint": "^8.21.0",
     "vitest": "^3.0.4",
     "zod": "^3.24.1"
   },
