--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "^9.19.0",
     "evalite": "^0.8.2",
     "glob": "^11.0.1",
+    "globals": "^15.14.0",
     "mathjs": "^14.1.0",
     "prettier": "^3.4.2",
     "sqlite3": "^5.1.7",
