--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-edit",
+  "name": "llm-edit",
   "module": "index.ts",
   "type": "module",
   "scripts": {
@@ -12,7 +12,6 @@
     "autoevals": "^0.0.118",
     "bun": "",
     "eslint": "^9.19.0",
-    "evalite": "^0.8.2",
     "glob": "^11.0.1",
     "globals": "^15.14.0",
     "mathjs": "^14.1.0",
@@ -20,7 +19,8 @@
     "sqlite3": "^5.1.7",
     "typescript-eslint": "^8.21.0",
     "vitest": "^3.0.4",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "evalite": "link:evalite"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
